--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-lp2",
+  "name": "okinawa-marine-activity",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.5.0",
-    "@stripe/stripe-js": "^6.1.0",
-    "@types/react-datepicker": "^7.0.0",
-    "next": "15.2.4",
-    "next-auth": "^4.24.11",
-    "prisma": "^6.5.0",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.2.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
-    "react-icons": "^5.5.0",
-    "stripe": "^17.7.0",
-    "zod": "^3.24.2"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3"
   }
 }
